--- a/src/Pufi/components/css/style.css
+++ b/src/Pufi/components/css/style.css
@@ -18,7 +18,7 @@
 .bg-img {
     background-image: url(../../../assets/img/city.jpg);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 100%;
     height: 426px;
 }
 
@@ -30,7 +30,9 @@
     color: var(--bg-color-primary);
     width: 50%;
 }
-
+.img-80{
+    width: 80%;
+}
 .img-100{
     width: 100%;
 }
@@ -41,4 +43,21 @@
 
 .bd_rigth{
     border-right: 2px solid var(--bg-color-primary);
+}
+
+.rightarrow{
+    background: transparent;
+    border: 1px;
+}
+.forminput{
+    border: 1px solid gray;
+    color: var(--bg-color-secondary);
+    font-family: 'Prompt', sans-serif;
+    font-size: 12px;
+    height: 30px;
+    padding: 10px;
+    width: 30%;
+}
+.blurr{
+    box-shadow: 0px -3px 0px #8080804f;
 }
